# AndroidCrypt

./: .gitignore  .gitmodules  LICENSE.txt  build.gradle  gradle.properties
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  androidcrypt.cpp
app/src/main/cpp/aescrypt_engine-master/: CHANGELOG.md  CMakeLists.txt  README.md  stream_format.md
app/src/main/cpp/aescrypt_engine-master/dependencies/: CMakeLists.txt
app/src/main/cpp/aescrypt_engine-master/include/terra/aescrypt/engine/: decryptor.h  encryptor.h
app/src/main/cpp/aescrypt_engine-master/src/: CMakeLists.txt  decryptor.cpp  encryptor.cpp  engine_common.h
app/src/main/cpp/aescrypt_engine-master/test/: string_stream_buffer.h
app/src/main/cpp/aescrypt_engine-master/test/decryption/: CMakeLists.txt  test_stream_3.cpp
app/src/main/cpp/aescrypt_engine-master/test/encryption/: CMakeLists.txt  test_encryption.cpp
app/src/main/cpp/androidcrypt-aescrypt_engine/: CHANGELOG.md  CMakeLists.txt  LICENSE.md  stream_format.md
app/src/main/cpp/androidcrypt-aescrypt_engine/dependencies/: CMakeLists.txt
app/src/main/cpp/androidcrypt-aescrypt_engine/include/terra/aescrypt/engine/: decryptor.h  encryptor.h
app/src/main/cpp/androidcrypt-aescrypt_engine/src/: CMakeLists.txt  decryptor.cpp  encryptor.cpp
app/src/main/cpp/androidcrypt-aescrypt_engine/test/: CMakeLists.txt  string_stream_buffer.h
app/src/main/cpp/androidcrypt-aescrypt_engine/test/decryption/: CMakeLists.txt  test_stream_0.cpp  test_stream_1.cpp  test_stream_2.cpp
app/src/main/cpp/androidcrypt-aescrypt_engine/test/encryption/: CMakeLists.txt  test_encryption.cpp
app/src/main/cpp/androidcrypt-conio/: CHANGELOG.md  CMakeLists.txt  README.md
app/src/main/cpp/androidcrypt-logger/: CHANGELOG.md  CMakeLists.txt
app/src/main/cpp/conio-master/: CHANGELOG.md  CMakeLists.txt
app/src/main/cpp/conio-master/ansi/: CMakeLists.txt  ansi.cpp
app/src/main/cpp/conio-master/dependencies/: CMakeLists.txt
app/src/main/cpp/conio-master/include/terra/conio/: ansi.h  progress_meter.h  utilities.h
app/src/main/cpp/conio-master/show_progress/: CMakeLists.txt
app/src/main/cpp/conio-master/src/: CMakeLists.txt  ansi.cpp  ansi_capable.cpp  progress_meter.cpp  utilities.cpp
app/src/main/cpp/conio-master/test/ansi_capable/: CMakeLists.txt  test_ansi_capable.cpp
app/src/main/cpp/dependencies/: CMakeLists.txt
app/src/main/cpp/libaes-master/: CHANGELOG.md  CMakeLists.txt  README.md  technical_notes.md
app/src/main/cpp/libaes-master/dependencies/: CMakeLists.txt
app/src/main/cpp/libaes-master/include/terra/crypto/cipher/: aes.h  aes_key_wrap.h
app/src/main/cpp/libaes-master/src/: CMakeLists.txt  aes.cpp  aes_intel.cpp  aes_intel.h  aes_key_wrap.cpp  aes_tables.h  aes_unavailable.h  aes_universal.cpp  aes_universal.h  aes_utilities.h  cpu_check.cpp  cpu_check.h  intel_intrinsics.h
app/src/main/cpp/libaes-master/test/: CMakeLists.txt
app/src/main/cpp/libaes-master/test/aes/: CMakeLists.txt  test_aes.cpp
app/src/main/cpp/libaes-master/test/aes_intel/: CMakeLists.txt  test_aes_intel.cpp
app/src/main/cpp/libaes-master/test/aes_key_wrap/: CMakeLists.txt  test_aes_key_wrap.cpp
app/src/main/cpp/libaes-master/test/aes_universal/: CMakeLists.txt  test_aes_universal.cpp
app/src/main/cpp/libhash-master/: CHANGELOG.md  CMakeLists.txt  README.md
app/src/main/cpp/libhash-master/dependencies/: CMakeLists.txt
app/src/main/cpp/libhash-master/include/terra/crypto/hashing/: hash.h  hmac.h  sha1.h  sha224.h  sha256.h  sha384.h  sha512.h
app/src/main/cpp/libhash-master/src/: CMakeLists.txt  hash.cpp  hmac.cpp  sha1.cpp  sha224.cpp  sha256.cpp  sha384.cpp  sha512.cpp
app/src/main/cpp/libhash-master/test/: CMakeLists.txt
app/src/main/cpp/libhash-master/test/hash/: CMakeLists.txt  test_hash.cpp
app/src/main/cpp/libhash-master/test/hmac/: CMakeLists.txt  test_hmac.cpp
app/src/main/cpp/libhash-master/test/sha1/: CMakeLists.txt  test_sha1.cpp
app/src/main/cpp/libhash-master/test/sha224/: CMakeLists.txt  test_sha224.cpp
app/src/main/cpp/libhash-master/test/sha256/: CMakeLists.txt  test_sha256.cpp
app/src/main/cpp/libhash-master/test/sha384/: CMakeLists.txt  test_sha384.cpp
app/src/main/cpp/libhash-master/test/sha512/: CMakeLists.txt  test_sha512.cpp
app/src/main/cpp/libkdf-master/: CHANGELOG.md  CMakeLists.txt  README.md
app/src/main/cpp/libkdf-master/dependencies/: CMakeLists.txt
app/src/main/cpp/libkdf-master/include/terra/crypto/kdf/: hkdf.h  kdf_exception.h  pbkdf.h
app/src/main/cpp/libkdf-master/src/: CMakeLists.txt  ackdf.cpp  hkdf.cpp  pbkdf1.cpp  pbkdf2.cpp
app/src/main/cpp/libkdf-master/test/: CMakeLists.txt
app/src/main/cpp/libkdf-master/test/ackdf/: CMakeLists.txt  test_ackdf.cpp
app/src/main/cpp/libkdf-master/test/hkdf/: CMakeLists.txt  test_hkdf.cpp
app/src/main/cpp/libkdf-master/test/pbkdf1/: CMakeLists.txt  test_pbkdf1.cpp
app/src/main/cpp/libkdf-master/test/pbkdf2/: CMakeLists.txt  test_pbkdf2.cpp
app/src/main/cpp/logger-master/: CHANGELOG.md  CMakeLists.txt  README.md
app/src/main/cpp/logger-master/dependencies/: CMakeLists.txt
app/src/main/cpp/logger-master/include/terra/logger/: log_level.h  logger.h  logger_interface.h  logger_macros.h  null_ostream.h
app/src/main/cpp/logger-master/sample/: CMakeLists.txt
app/src/main/cpp/logger-master/sample/src/: CMakeLists.txt
app/src/main/cpp/logger-master/src/: CMakeLists.txt  logger.cpp
app/src/main/cpp/logger-master/test/logger/: CMakeLists.txt
app/src/main/java/: AboutFragment.java
app/src/main/res/anim/: slide_out_left.xml
app/src/main/res/drawable/: circle_button_pressed.xml  circle_button_selecter.xml  circle_button_unpressed.xml  file_select_button_selected.xml  file_select_button_selector.xml  file_select_button_unselected.xml  ic_add_folder.xml  ic_cancel.xml  ic_compress_no_zipper.xml  ic_copy.xml  ic_cursor.xml  (+21 more)
docs/: index.html
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
gradle/wrapper/: gradle-wrapper.properties
privacypolicy/: index.html
(+188 files in other folders)
